# stock-analysis

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  STOCK_ANALYSIS_FRAMEWORK.md  docker-compose.yml  pyproject.toml  run_analysis.py
.agent/workflows/: stock-analysis.md
.gemini/: implementation_plan.md
agents/skills/: project_check_skill.md  project_check_skill.py  stock_analysis_skill.md  stock_analysis_skill.py
config/config/: __init__.py
docs/: CURRENT_TEMPLATE.md  FULL_PROJECT_FRAMEWORK.md  INDICATORS_REFERENCE.md  PROJECT_ARCHITECTURE.md  REPORT_TEMPLATE.md  TECHNICAL_INDICATORS.md
models/core/: analyzer.py  market_review.py  pipeline.py  technical_indicators.py
scripts/: main.py
scripts/examples/: demo_ai_analysis.py  run_stock_analysis.py
sources/: tencent_data_source.py
src/stock_analysis/: __init__.py  __main__.py  constants.py  main.py
src/stock_analysis/config/: __init__.py
src/stock_analysis/core/: __init__.py  analyzer.py  pipeline.py  technical_indicators.py
src/stock_analysis/data/: __init__.py  stock_codes.json
src/stock_analysis/data_sources/: __init__.py  tencent.py
src/stock_analysis/notification/: __init__.py
src/stock_analysis/skills/: SKILL.md  __init__.py  stock_analysis.py
src/stock_analysis/utils/: __init__.py  stock_code.py
tests/: test_config.py  test_stock_code.py  test_technical_indicators.py
utils/: analyzer.py  search_service.py
utils/notification/: __init__.py
